removed gui files